// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/trial_benefits_modal/trial_benefits_modal_step should match snapshot 1`] = `
<body>
  <div>
    <div
      class="TrialBenefitsModalStep slide-container"
      id="trialBenefitsModalStep-stepId"
    >
      <div
        class="title"
      >
        Step title
      </div>
      <div
        class="description"
      >
        Step description
      </div>
      <div
        class="stepClassname svg-wrapper"
      >
        <svg />
      </div>
    </div>
  </div>
</body>
`;

exports[`components/trial_benefits_modal/trial_benefits_modal_step should match snapshot with optional params 1`] = `
<body>
  <div>
    <div
      class="TrialBenefitsModalStep slide-container"
      id="trialBenefitsModalStep-stepId"
    >
      <div
        class="title"
      >
        Step title
      </div>
      <div
        class="description"
      >
        Step description
      </div>
      <a
        class="TrialBenefitsModalStepMore learn-more-button"
      >
        button
      </a>
      <div
        class="stepClassname svg-wrapper"
      >
        <svg />
      </div>
      <div
        class="bottom-text-left-message"
      >
        Step bottom message
      </div>
    </div>
  </div>
</body>
`;
